--- a/dockerfile_sub
+++ b/dockerfile_sub
@@ -5,7 +5,6 @@ WORKDIR /app
 
 RUN pip install -r requirements.txt
 
-ENV 
+CMD python crawler_subscriber.py
 
-CMD ["python3", "crawler_subscriber.py"]
 
